# hermes-dec

./: .gitignore  README.md  hbc_decompiler.py  hbc_disassembler.py  hbc_file_parser.py  pyproject.toml
src/decompilation/: defs.py  hbc_decompiler.py  pass1_set_metadata.py  pass2_transform_code.py  pass3_parse_forin_loops.py  pass4_name_closure_vars.py
src/disassembly/: hbc_disassembler.py
src/parsers/: debug_info_parser.py  hbc_bytecode_parser.py  hbc_file_parser.py  pretty_print.py  regexp_bytecode_parser.py  serialized_literal_parser.py
src/parsers/hbc_opcodes/: def_classes.py
utils/: hermes_bytecode_structs_parser.py  hermes_bytecode_structs_table_gen.py  regex_bytecode_structs_parser.py
